# Railan

./: Cargo.toml  README.md
assets/: exit.txt  main.txt  main_menu.txt  menu.txt  welcome.txt
saves/: k_best_kingdom.json
src/: data.rs  game.rs  main.rs  menu.rs  threadcom.rs
src/data/: craft.rs  kingdom.rs  saves.rs  village.rs
src/game/: game_loop.rs
src/menu/: assets.rs  current_ui.rs  event_listener.rs  events.rs  rendering.rs  ui_foundations.rs  user_interface.rs
src/menu/rendering/: craft_menu.rs  diplomacy_menu.rs  full_screen.rs  main_menu.rs  village_menu.rs
