[package]
name = "railan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
serde_with = "2.3.1"
tui = "0.19"
crossterm = { version = "0.25", features = ["event-stream"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
futures = "0.3.27"